# bdd_formation_simplon

./: .gitignore  README.md  mkdocs.yml  model.py  notes_arnaud.txt  pyproject.toml  start.py  witch
API/: app.py  get_connect.py  main.py  schemas.py  start.py
API/api/: api_main.py  crud.py  models.py  nettoyagebd.py  scriptinspection.py
API/streamlit/: home_page.py  home_page4.py  home_page5.py
BDD/: crud.py  crud_dai.py  models.py
SCRAPER/crawl_simplon/: scrapy.cfg
SCRAPER/crawl_simplon/crawl_simplon/: items.py  middlewares.py  pipelines.py  settings.py
SCRAPER/crawl_simplon/crawl_simplon/spiders/: simplonspider.py  simplonspiderformation.py  simplonspidersession.py
TRAITEMENT_MCF/: download.py  toto.py  treat_files.py
docs/: index.md
docs/bdd/: module1.md  module2.md  module3.md  module4.md  module5.md
