[tool.poetry]
name = "bdd-formation-simplon"
version = "0.1.0"
description = ""
authors = ["Data_Avangers"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.11.2"
pandas = "^2.2.2"
sqlalchemy = "^2.0.31"
dateparser = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
