[tool.poetry]
name = "bdd-formation-simplon"
version = "0.1.0"
description = ""
authors = ["Data_Avangers"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.2"
pandas = "^2.2.2"
sqlalchemy = "^2.0.31"
fastapi = "^0.111.1"
streamlit = "^1.36.0"
uvicorn = "^0.30.1"
xlsxwriter = "^3.2.0"

[tool.poetry.scripts]
run-app = "scripts.run_app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
